# tesseract-raytracing

./: .gitignore  CMakeLists.txt  aabb.h  bvh.h  camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  quad.h  render.sh  rtweekend.h  sphere.h  test  texture.h  vec3.h
.cache/clangd/index/: camera.h.2D68EB440E91A6A8.idx  color.h.3BDF5ACC60B84F9A.idx  hittable.h.06E0B747853E7D7D.idx  hittable_list.h.CE078041B6A07E40.idx  interval.h.82ABBC40A1E81888.idx  main.cpp.B2F20F8F07655662.idx  material.h.266A9EE5CAE556A7.idx  ray.h.B98ED36DD48C1D85.idx  rtweekend.h.CA11D74C42C620AF.idx  sphere.h.3A812CB2694F929C.idx  vec3.h.12CE08E7F788BDA6.idx
